added flawed but basic functionality in js

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <div id="painted-table">
     
     <div id="col1">
-      <div id="one" class="card stark"></div>
-      <div id="two" class="card stark"></div>
-    </div> <!--row 1-->
+      <div id="one" class="card facedown stark"></div>
+      <div id="two" class="card facedown stark"></div>
+    </div> <!--col 1-->
 
     <div id="col2">
-      <div id="three" class="card lannister"></div>
-      <div id="four" class="card lannister"></div>
-    </div><!--row 3-->
+      <div id="three" class="card facedown lannister"></div>
+      <div id="four" class="card facedown lannister"></div>
+    </div><!--col 2-->
 
   </div><!--painted table-->
-  
+
   <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="main.js"></script>
 </body>
