expanded grid started work on shuffling array

--- a/index.html
+++ b/index.html
@@ -11,15 +11,30 @@
 
   <div id="painted-table">
     
-    <div id="col1">
+    <div class="column"> <!--col 1 -->
       <div id="one" class="card facedown stark"></div>
       <div id="two" class="card facedown stark"></div>
     </div> <!--col 1-->
 
-    <div id="col2">
+    <div class="column"> <!--col 2 -->
       <div id="three" class="card facedown lannister"></div>
       <div id="four" class="card facedown lannister"></div>
     </div><!--col 2-->
+
+    <div class="column"> <!--col 3 -->
+      <div id="five" class="card facedown targaryen"></div>
+      <div id="six" class="card facedown targaryen"></div>
+    </div><!-- col 3 -->
+
+    <div class="column"> <!--col 4 -->
+      <div id="seven" class="card facedown baratheon"></div>
+      <div id="eight" class="card facedown baratheon"></div>
+    </div> <!--col 4 -->
+
+    <div class="column"><!--col 5 -->
+      <div id="nine" class="card facedown greyjoy "></div>
+      <div id="ten" class="card facedown greyjoy"></div>
+    <div><!--col 6 -->
 
   </div><!--painted table-->
 
