--- a/index.html
+++ b/index.html
@@ -11,30 +11,42 @@
 
   <div id="painted-table">
     
+    <a id="new-game-btn">New Game</a>
+
     <div class="column"> <!--col 1 -->
       <div id="one" class="card facedown"></div>
       <div id="two" class="card facedown"></div>
+      <div id="three" class="card facedown"></div>
+      <div id="four" class="card facedown"></div>
     </div> <!--col 1-->
 
     <div class="column"> <!--col 2 -->
-      <div id="three" class="card facedown"></div>
-      <div id="four" class="card facedown"></div>
+      <div id="five" class="card facedown"></div>
+      <div id="six" class="card facedown"></div>
+      <div id="seven" class="card facedown"></div>
+      <div id="eight" class="card facedown"></div>
     </div><!--col 2-->
 
     <div class="column"> <!--col 3 -->
-      <div id="five" class="card facedown"></div>
-      <div id="six" class="card facedown"></div>
+      <div id="nine" class="card facedown"></div>
+      <div id="ten" class="card facedown"></div>
+      <div id="eleven" class="card facedown"></div>
+      <div id="twelve" class="card facedown"></div>
     </div><!-- col 3 -->
 
     <div class="column"> <!--col 4 -->
-      <div id="seven" class="card facedown"></div>
-      <div id="eight" class="card facedown"></div>
+      <div id="thirteen" class="card facedown"></div>
+      <div id="fourteen" class="card facedown"></div>
+      <div id="fifteen" class="card facedown"></div>
+      <div id="sixteen" class="card facedown"></div>
     </div> <!--col 4 -->
 
     <div class="column"><!--col 5 -->
-      <div id="nine" class="card facedown"></div>
-      <div id="ten" class="card facedown"></div>
-    <div><!--col 6 -->
+      <div id="seventeen" class="card facedown"></div>
+      <div id="eighteen" class="card facedown"></div>
+      <div id="nineteen" class="card facedown"></div>
+      <div id="twenty" class="card facedown"></div>
+    <div><!--col 5 -->
 
   </div><!--painted table-->
 
