created reset btn/func and got them working

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <h1>Unflipped, Unmatched, Unwon</h1>
 
   <div id="painted-table">
-    
-    <a id="new-game-btn">New Game</a>
 
     <div class="column"> <!--col 1 -->
       <div id="one" class="card facedown"></div>
@@ -46,9 +44,11 @@
       <div id="eighteen" class="card facedown"></div>
       <div id="nineteen" class="card facedown"></div>
       <div id="twenty" class="card facedown"></div>
-    <div><!--col 5 -->
+    </div><!--col 5 -->
 
   </div><!--painted table-->
+
+  <a id="new-game-btn">New Game</a>
 
   <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
   <script src="main.js"></script>
