added images to classes, css work

--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>GoT Concentration</title>
   <link rel="stylesheet" href="animate.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <h1>Unflipped, Unmatched, Unwon</h1>
+  
+  <header>
+    <h1>A Match of Ice and Fire</h1>
+    <p class="hidden">Press "New Game" below to begin</p>
+  </header>
 
   <div id="painted-table">
 
