added timer and scoring

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   
   <header>
     <h1>A Match of Ice and Fire</h1>
-    <p class="hidden">Press "New Game" below to begin</p>
+    <h2 id="instructions" class="hidden">Press "New Game" below to begin</h2>
+    <label for="timer">Timer:</label>
+    <a id="timer"></a>
+    <h2 id="best-time">Best Time: 0</h2>
   </header>
 
   <div id="painted-table">
