added hide/show timer btn

--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
   
   <header>
     <h1>A Match of Ice and Fire</h1>
-    <h2 id="instructions" class="hidden">Press "New Game" below to begin</h2>
-    <label for="timer">Timer:</label>
-    <a id="timer"></a>
+    <h2 id="instructions">Press "New Game" below to begin</h2>
+    
+    <div id="timer-elements">
+      <label for="timer">Timer:</label>
+      <a id="timer"></a>
+      <a id="hide-timer-btn">Hide Timer</a>
+      <!-- <a id="show-timer-btn">Show Timer</a> -->
+    </div>
+
     <h2 id="best-time">Best Time: 0</h2>
   </header>
 
