hide timer added to determineWinner()

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
   <header>
     <h1>A Match of Ice and Fire</h1>
-    <h2 id="instructions">Press "New Game" below to begin</h2>
+    <h2 id="instructions">Press "New Game" at bottom to begin</h2>
     
     <div id="timer-elements">
       <label for="timer">Timer:</label>
