animated, css changes

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     
     <div id="timer-elements">
       <label for="timer">Timer:</label>
-      <a id="timer"></a>
+      <a id="timer">0</a>
       <a id="hide-timer-btn">Hide Timer</a>
-      <!-- <a id="show-timer-btn">Show Timer</a> -->
     </div>
 
     <h2 id="best-time">Best Time: 0</h2>
